--- a/Lesson 1/HW_1.3_result.html
+++ b/Lesson 1/HW_1.3_result.html
@@ -11,8 +11,7 @@
             background-size: cover;
         }
         div {
-            background-color: #F7F0ED;
-            opacity: 0.9;
+            background: rgba(247, 240, 237, 0.9);
             padding: 1rem;
             margin: 2.5rem 5.75rem;
             width: 60%;
