--- a/Lesson 1/HW_1.1_result.html
+++ b/Lesson 1/HW_1.1_result.html
@@ -15,11 +15,25 @@
 <body>
 <h1>Терміна́тор</h1>
 <h2>Джеймс Кемерон, 1984</h2>
-<p>«Терміна́тор» <i>(англ. The Terminator)</i> — американський культовий фантастичний бойовик Джеймса Кемерона, знятий у 1984 році. Це перший фільм із серії про Термінатора. Фільм довгий час входив до списку 250 найкращих фільмів за версією <b>IMDb</b>, станом на 12 грудня 2021 року посідає 44-у позицію у рейтингу науково-фантастичних стрічок.
+<p>
+    «Терміна́тор» <i>(англ. The Terminator)</i> — американський культовий фантастичний бойовик Джеймса Кемерона,
+    знятий у 1984 році. Це перший фільм із серії про Термінатора. Фільм довгий час входив до списку 250 найкращих
+    фільмів за версією <b>IMDb</b>, станом на 12 грудня 2021 року посідає 44-у позицію у рейтингу науково-фантастичних
+    стрічок.
+</p>
 
-<p>Успіх фільму призвів до створення франшизи, що складається з кількох сиквелів, телесеріалу, коміксів, романів та відеоігор. У 2008 році «Термінатор» обраний Бібліотекою Конгресу для збереження в Національному реєстрі фільмів як <i>«культурно, історично або естетично значущий»</i>.
-
-<p>Фільм відкривається сценою похмурого майбутнього, де триває війна людей і машин. Але головна битва цієї війни має відбутися в минулому, 1984 року. В нічному Лос-Анджелесі водій сміттєвозу стає свідком дивних спалахів, з яких з'являється оголений чоловік, <b>Термінатор Т-800</b> (Арнольд Шварценеггер). Цей невідомий знаходить групу панків, яким наказує віддати йому одяг. У відповідь на погрози невідомий демонструє величезну силу, вбиває панків і відбирає одяг. Згодом з іншого спалаху виникає інший чоловік, Кайл Різ (Майкл Бін), котрий забирає у волоцюги штани і тікає від переслідування поліцією
-
+<p>
+    Успіх фільму призвів до створення франшизи, що складається з кількох сиквелів, телесеріалу, коміксів, романів та
+    відеоігор. У 2008 році «Термінатор» обраний Бібліотекою Конгресу для збереження в Національному реєстрі фільмів як
+    <i>«культурно, історично або естетично значущий»</i>.
+</p>
+<p>
+    Фільм відкривається сценою похмурого майбутнього, де триває війна людей і машин. Але головна битва цієї війни має
+    відбутися в минулому, 1984 року. В нічному Лос-Анджелесі водій сміттєвозу стає свідком дивних спалахів, з яких
+    з'являється оголений чоловік, <strong>Термінатор Т-800</strong> (Арнольд Шварценеггер). Цей невідомий знаходить групу панків,
+    яким наказує віддати йому одяг. У відповідь на погрози невідомий демонструє величезну силу, вбиває панків і
+    відбирає одяг. Згодом з іншого спалаху виникає інший чоловік, Кайл Різ (Майкл Бін), котрий забирає у волоцюги
+    штани і тікає від переслідування поліцією
+</p>
 </body>
 </html>
