double <br> was replaced by <p>; style was corrected; </p> was added;

--- a/Lesson 1/HW_1.3_result.html
+++ b/Lesson 1/HW_1.3_result.html
@@ -10,16 +10,23 @@
             background-attachment: fixed;
             background-size: cover;
         }
+
         div {
             background: rgba(247, 240, 237, 0.9);
             padding: 1rem;
             margin: 2.5rem 5.75rem;
             width: 60%;
         }
+
         h1 {
             line-height: 1.15;
             font-size: 1.9rem;
             margin: 0 0 0.25rem 0;
+        }
+
+        p {
+            margin-block-start: 0;
+            margin-block-end: 0;
         }
     </style>
 </head>
@@ -31,19 +38,34 @@
 </div>
 
 <div>
-    У психології сприйняття кольорів є важливою темою, оскільки кольори можуть впливати на наше настрій, поведінку та емоції. Людський мозок сприймає кольори за допомогою спеціальних клітин в очах, які називаються конусами.За допомогою конусів ми сприймаємо три основні кольори - червоний, зелений і синій. Комбінування цих трьох кольорів у різних співвідношеннях дає нам можливість сприймати всі інші кольори.
-    <br>
-    <br>
-    Кожен колір може викликати різні емоції і асоціації. Наприклад, червоний колір може викликати емоції страху, ризику та сили, а також асоціюється з любов'ю, енергією та пасією. Зелений колір може викликати емоції спокою, гармонії та природи, а також асоціюється зі здоров'ям і відпочинком. Синій колір може викликати емоції мирної і глибокої медитації, а також асоціюється з вірою, довірою та вірністю.
-    Деякі люди можуть мати специфічні сприйняття кольорів, що називається синестезією. Це означає, що колір може викликати не тільки візуальну реакцію, але і фізіологічну або звукову. Наприклад, люди з синестезією можуть бачити цифри в різних кольорах або відчувати запах кольору.
+    <p>
+        У психології сприйняття кольорів є важливою темою, оскільки кольори можуть впливати на наше настрій, поведінку
+        та емоції. Людський мозок сприймає кольори за допомогою спеціальних клітин в очах, які називаються конусами.За
+        допомогою конусів ми сприймаємо три основні кольори - червоний, зелений і синій. Комбінування цих трьох кольорів
+        у різних співвідношеннях дає нам можливість сприймати всі інші кольори.
+    </p>
+    <p>
+        Кожен колір може викликати різні емоції і асоціації. Наприклад, червоний колір може викликати емоції страху,
+        ризику та сили, а також асоціюється з любов'ю, енергією та пасією. Зелений колір може викликати емоції спокою,
+        гармонії та природи, а також асоціюється зі здоров'ям і відпочинком. Синій колір може викликати емоції мирної і
+        глибокої медитації, а також асоціюється з вірою, довірою та вірністю.
+        Деякі люди можуть мати специфічні сприйняття кольорів, що називається синестезією. Це означає, що колір може
+        викликати не тільки візуальну реакцію, але і фізіологічну або звукову. Наприклад, люди з синестезією можуть
+        бачити цифри в різних кольорах або відчувати запах кольору.
+    </p>
 </div>
 
 <div>
-    У психології кольорів існує також теорія кольорів, яка описує взаємодію різних кольорів між собою. Наприклад, комбінація червоного і жовтого кольорів може викликати відчуття енергії та тепла, тоді як комбінація синього і зеленого може викликати відчуття спокою та гармонії.
+    У психології кольорів існує також теорія кольорів, яка описує взаємодію різних кольорів між собою. Наприклад,
+    комбінація червоного і жовтого кольорів може викликати відчуття енергії та тепла, тоді як комбінація синього і
+    зеленого може викликати відчуття спокою та гармонії.
 
-    Кольори також можуть викликати асоціації з конкретними ідеями або поняттями. Наприклад, зелений колір може асоціюватися з екологією або грошима, червоний - зі здоров'ям або енергією, а синій - з вірою або надією.
+    Кольори також можуть викликати асоціації з конкретними ідеями або поняттями. Наприклад, зелений колір може
+    асоціюватися з екологією або грошима, червоний - зі здоров'ям або енергією, а синій - з вірою або надією.
 
-    Кольорова терапія - це техніка використання кольорів для зменшення стресу та покращення настрою. Вона може включати в себе використання кольорових ламп, кольорових каменів, кольорових ароматів та інших кольорових технік для досягнення певних цілей.
+    Кольорова терапія - це техніка використання кольорів для зменшення стресу та покращення настрою. Вона може включати
+    в себе використання кольорових ламп, кольорових каменів, кольорових ароматів та інших кольорових технік для
+    досягнення певних цілей.
 </div>
 </body>
 </html>
