--- a/Lesson 1/HW_1.4_result.html
+++ b/Lesson 1/HW_1.4_result.html
@@ -4,47 +4,44 @@
     <meta charset="UTF-8">
     <title>Cards</title>
     <style>
-        td {
+        span {
+            display: inline-block;
             background: #E0E0E2;
             padding: 0.25rem 0.5rem;
+            margin-right: 0.1rem;
         }
-        table {
-            border-spacing: 0.5rem;
-            margin: -0.5rem -0.5rem;
-        }
+
         .clubs, .spades {
             color: #050005;
         }
+
         .hearts, .diams {
             color: #990100;
-         }
+        }
     </style>
 </head>
 <body>
+<p>
     Player 1:
-    <p>
-    <table>
-        <tr>
-            <td class="clubs">2 &clubs;</td>
-            <td class="hearts">9 &hearts;</td>
-            <td class="hearts">6 &hearts;</td>
-            <td class="diams">A &diams;</td>
-            <td class="spades">Q &spades;</td>
-            <td class="clubs">J &clubs;</td>
-        </tr>
-    </table>
-    <p>
+</p>
+<p>
+    <span class="clubs">2 &clubs;</span>
+    <span class="hearts">9 &hearts;</span>
+    <span class="hearts">6 &hearts;</span>
+    <span class="diams">A &diams;</span>
+    <span class="spades">Q &spades;</span>
+    <span class="clubs">J &clubs;</span>
+</p>
+<p>
     Player 2:
-    <p>
-    <table>
-        <tr>
-            <td class="hearts">3 &hearts;</td>
-            <td class="clubs">A &clubs;</td>
-            <td class="clubs">10 &clubs;</td>
-            <td class="diams">K &diams;</td>
-            <td class="spades">8 &spades;</td>
-            <td class="hearts">3 &hearts;</td>
-        </tr>
-    </table>
+</p>
+<p>
+    <span class="hearts">3 &hearts;</span>
+    <span class="clubs">A &clubs;</span>
+    <span class="clubs">10 &clubs;</span>
+    <span class="diams">K &diams;</span>
+    <span class="spades">8 &spades;</span>
+    <span class="hearts">3 &hearts;</span>
+</p>
 </body>
 </html>
