hover transition and gradient were added

--- a/Lesson 1/HW_1.5_result.html
+++ b/Lesson 1/HW_1.5_result.html
@@ -152,10 +152,12 @@
 
             background-size: cover;
             background-position: center;
+            transition: 0.5s;
         }
 
         .text-container {
             background: rgba(0, 0, 0, 0.5);
+            background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.6615896358543417) 51%, rgba(0,0,0,0) 100%);
             text-align: left;
             width: 100%;
             padding: 1rem;
@@ -164,21 +166,25 @@
         .image:hover .role {
             font-weight: 900;
             font-size: 1.2rem;
+            transition: 0.5s;
         }
 
         .image:hover .name {
             font-weight: 300;
             font-size: 0.8rem;
+            transition: 0.5s;
         }
 
         .role {
             font-weight: 300;
             font-size: 0.8rem;
+            transition: 0.5s;
         }
 
         .name {
             font-weight: 900;
             font-size: 1.2rem;
+            transition: 0.5s;
         }
     </style>
 
