--- a/Lesson 1/HW_1.5_result.html
+++ b/Lesson 1/HW_1.5_result.html
@@ -157,7 +157,7 @@
 
         .text-container {
             background: rgba(0, 0, 0, 0.5);
-            background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.6615896358543417) 51%, rgba(0,0,0,0) 100%);
+            background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.75) 50%, rgba(0,0,0,0) 100%);
             text-align: left;
             width: 100%;
             padding: 1rem;
