transformation was added

--- a/Lesson 2/results/HW_2.3.html
+++ b/Lesson 2/results/HW_2.3.html
@@ -20,6 +20,13 @@
             width: 12rem;
             padding: 0.5rem 1rem;
             border-radius: 0.25rem;
+            transition: 0.5s;
+        }
+
+        .card:hover {
+            transform: scale(105%);
+            background-color: rgb(230, 250, 220);
+            transition: 1s;
         }
 
         h1 {
