text_container class was added, redundant properties were deleted

--- a/Lesson 3/results/HW_3.1/index.html
+++ b/Lesson 3/results/HW_3.1/index.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="widgets">Widgets</div>
+    <div class="widgets text_container">Widgets</div>
     <div class="big_widgets-container">
-        <div class="big_widget">Big widget</div>
-        <div class="big_widget">Big widget</div>
-        <div class="big_widget">Big widget</div>
+        <div class="big_widget text_container">Big widget</div>
+        <div class="big_widget text_container">Big widget</div>
+        <div class="big_widget text_container">Big widget</div>
     </div>
-    <div class="contact">Contact</div>
+    <div class="contact text_container">Contact</div>
 </body>
 </html>
