text-transform property was deleted from main css file. Images were added to about page. Refactoring.

--- a/Lesson 3/results/Allan_Jonson_web_site/index.html
+++ b/Lesson 3/results/Allan_Jonson_web_site/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Allan Jonson | HOME</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <header>
@@ -23,9 +23,9 @@
     </nav>
 </header>
 <main>
-    <p>Ambition is A first step to success</p>
+    <p>Ambition Is A First Step To Success</p>
     <h1>Success</h1>
-    <p>Now available for online coaching</p>
+    <p>Now Available For Online Coaching</p>
     <button>Book now</button>
 </main>
 </body>
