--- a/Lesson 3/results/Allan_Jonson_web_site/about.html
+++ b/Lesson 3/results/Allan_Jonson_web_site/about.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Allan Jonson | ABOUT</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/service.css">
 </head>
 <body>
 <header>
@@ -25,23 +26,30 @@
 </header>
 <main>
     <h1 id="beginning"> About Me</h1>
-    <div class="card">
+    <div class="full-page card">
         <h2> Welcome to Your Path of Personal Growth</h2>
-        <p> Hello! My name is Allan Jonson, and I am a certified personal life coach dedicated to helping individuals
-            like you unlock their full potential. My mission is to provide you with the tools, guidance, and support
-            needed to navigate life's challenges, set meaningful goals, and create a life you truly love.
+        <p> Hello! My name is Allan Jonson, and I am a certified personal life coach dedicated to helping
+            individuals like you unlock their full potential. My mission is to provide you with the tools,
+            guidance, and support needed to navigate life's challenges, set meaningful goals, and create
+            a life you truly love.
         </p>
     </div>
-    <div class="card">
-        <h2> My Journey to Becoming a Life Coach</h2>
-        <p> My passion for personal development began 10 years ago when I experienced my own transformative journey.
-            After overcoming burnout in my corporate career, navigating a major life transition, and addressing
-            long-standing self-doubt, I realized the power of self-awareness and intentional growth. This inspired me to
-            pursue certifications in Positive Psychology Coaching, Cognitive-Behavioral Coaching, and Mindfulness-Based
-            Stress Reduction and dedicate my career to helping others achieve their dreams.
-        </p>
+    <div class="full-page row card">
+        <div class="column">
+            <h2> My Journey to Becoming a Life Coach</h2>
+            <p> It was a journey shaped by challenges. There were moments when I felt stuck, doubted myself,
+                and questioned my path. But through determination and self-discovery, I turned my struggles
+                into stepping stones.
+            </p>
+            <p> After all, I realized the power of self-awareness and intentional growth. This
+                inspired me to pursue certifications in Positive Psychology Coaching, Cognitive-Behavioral Coaching,
+                and Mindfulness-Based Stress Reduction and dedicate my career to helping others achieve their
+                dreams.
+            </p>
+        </div>
+        <img src="photo/man-suit-shouting.png"/>
     </div>
-    <div class="card">
+    <div class="full-page card">
         <h2> My Approach to Coaching</h2>
         <h3>Personalized Support</h3>
         <p>Your journey is unique, and so is my approach. I tailor each session to your specific needs, goals, and
@@ -55,35 +63,48 @@
             <li>Mindfulness practices</li>
         </ul>
         <h3>Accountability and Encouragement</h3>
-        <p>I am here to celebrate your wins, guide you through setbacks, and keep you accountable to the commitments you
-            make to yourself.
+        <p>I am here to celebrate your wins, guide you through setbacks, and keep you accountable to the commitments
+            you make to yourself.
         </p>
     </div>
-    <div class="card">
-        <h2> Why Choose Me?</h2>
-        <h3>Experience</h3>
-        <p>Over 10 years of working with individuals from diverse backgrounds.</p>
-        <h3>Certifications</h3>
-        <p>Certified in Positive Psychology Coaching, Neuro-Linguistic Programming (NLP), and
-            Leadership Coaching.</p>
-        <h3>Proven Results</h3>
-        <p>Testimonials from clients who have achieved significant transformations. You can find the customer's feedback
-            at this <a href="/">link</a>.</p>
-        <h3>Passion</h3>
-        <p>Genuine commitment to helping you achieve your best life.</p>
+    <h2> Why Choose Me?</h2>
+    <div class="service-container">
+        <div class="service-item card">
+            <img src="icons/one_on_one_coaching.png">
+            <h3>Experience</h3>
+            <span>Over 10 years of guiding individuals from diverse backgrounds to achieve their personal
+                    growth.</span>
+        </div>
+        <div class="service-item card">
+            <img src="icons/sertificate.png">
+            <h3>Certifications</h3>
+            <span>Certified in Positive Psychology Coaching, Neuro-Linguistic Programming (NLP), and Leadership
+                    Coaching.</span>
+        </div>
+        <div class="service-item card">
+            <img src="icons/group_coaching.png">
+            <h3>Proven Results</h3>
+            <span>Testimonials from clients who have achieved significant transformations. You can find the
+                    customer's feedback at this</span>
+        </div>
+        <div class="service-item card">
+            <img src="icons/passion.png">
+            <h3>Passion</h3>
+            <span>My passion is helping people. Together, we’ll craft a path that inspires and leads you to your
+                    dreams.</span>
+        </div>
     </div>
-    <div class="card">
+    <div class="full-page card">
         <h2> Let’s Start Your Journey</h2>
-        <p> If you’re ready to take the first step towards a more fulfilling life, I’d love to partner with you on this
-            journey. Together, we’ll uncover your potential, set actionable goals, and create a roadmap to your success.
+        <p> If you’re ready to take the first step towards a more fulfilling life, I’d love to partner with you on
+            this journey. Together, we’ll uncover your potential, set actionable goals, and create a roadmap to
+            your success.
         </p>
         <h3> Get in Touch</h3>
-        <p> Feel free to contact me in any way convenient for you. Click the <a href="contact.html">link</a> to view my
-            full contact information. Let’s work together to make your dreams a
-            reality!
+        <p> Feel free to contact me in any way convenient for you. Click the <a href="contact.html">link</a> to view
+            my full contact information. Let’s work together to make your dreams a reality!
         </p>
     </div>
-
     <div class="to_the_beginning_btn">
         <a href="#beginning"> &uparrow;</a>
     </div>
