--- a/Lesson 3/results/Allan_Jonson_web_site/contact.html
+++ b/Lesson 3/results/Allan_Jonson_web_site/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Allan Jonson | CONTACT</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/contact.css">
 </head>
 <body>
