alts were added to images, typo in icon filename was fixed

--- a/Lesson 3/results/Allan_Jonson_web_site/about.html
+++ b/Lesson 3/results/Allan_Jonson_web_site/about.html
@@ -47,7 +47,7 @@
                 dreams.
             </p>
         </div>
-        <img src="photo/man-suit-shouting.png"/>
+        <img src="photo/man-suit-shouting.png" alt="Allan Jonson was stressed"/>
     </div>
     <div class="full-page card">
         <h2> My Approach to Coaching</h2>
@@ -70,25 +70,25 @@
     <h2> Why Choose Me?</h2>
     <div class="service-container">
         <div class="service-item card">
-            <img src="icons/one_on_one_coaching.png">
+            <img src="icons/one_on_one_coaching.png" alt="experience icon">
             <h3>Experience</h3>
             <span>Over 10 years of guiding individuals from diverse backgrounds to achieve their personal
                     growth.</span>
         </div>
         <div class="service-item card">
-            <img src="icons/sertificate.png">
+            <img src="icons/certificate.png" alt="certificate icon">
             <h3>Certifications</h3>
             <span>Certified in Positive Psychology Coaching, Neuro-Linguistic Programming (NLP), and Leadership
                     Coaching.</span>
         </div>
         <div class="service-item card">
-            <img src="icons/group_coaching.png">
+            <img src="icons/group_coaching.png" alt="proven results icon">
             <h3>Proven Results</h3>
             <span>Testimonials from clients who have achieved significant transformations. You can find the
                     customer's feedback at this</span>
         </div>
         <div class="service-item card">
-            <img src="icons/passion.png">
+            <img src="icons/passion.png" alt="passion icon">
             <h3>Passion</h3>
             <span>My passion is helping people. Together, we’ll craft a path that inspires and leads you to your
                     dreams.</span>
