--- a/Lesson 3/results/Allan_Jonson_web_site/service.html
+++ b/Lesson 3/results/Allan_Jonson_web_site/service.html
@@ -26,37 +26,37 @@
 <main>
     <div class="service-container">
         <div class="service-item card">
-            <img src="icons/one_on_one_coaching.png">
+            <img src="icons/one_on_one_coaching.png" alt="one on one coaching icon">
             <h3>One-on-One Coaching</h3>
             <span>Personalized sessions to explore your goals and challenges, with actionable steps to help you move forward
           with confidence.</span>
         </div>
         <div class="service-item card">
-            <img src="icons/career_coaching.png">
+            <img src="icons/career_coaching.png" alt="career coaching icon">
             <h3>Career Coaching</h3>
             <span>Clarify your career path, develop new skills, and create a strategy to achieve greater job satisfaction and
             growth.</span>
         </div>
         <div class="service-item card">
-            <img src="icons/relationship_coaching.png">
+            <img src="icons/relationship_coaching.png" alt="relationship coaching icon">
             <h3>Relationship Coaching</h3>
             <span>Clarify your career path, develop new skills, and create a strategy to achieve greater job satisfaction and
             growth.</span>
         </div>
         <div class="service-item card">
-            <img src="icons/group_coaching.png">
+            <img src="icons/group_coaching.png" alt="group coaching icon">
             <h3>Group Workshops & Training</h3>
             <span>Join group sessions on topics like time management, emotional resilience, and stress management for personal
             and professional growth.</span>
         </div>
         <div class="service-item card">
-            <img src="icons/online_coaching.png">
+            <img src="icons/online_coaching.png" alt="online coaching icon">
             <h3>Online Coaching</h3>
             <span>Flexible remote coaching through video or phone calls, allowing you to work towards your goals no matter
             where you are.</span>
         </div>
         <div class="service-item card">
-            <img src="icons/schedule_coaching.png">
+            <img src="icons/schedule_coaching.png" alt="schedule coaching icon">
             <h3>Monthly or Yearly Programs</h3>
             <span>Long-term coaching programs with regular sessions, tailored exercises, and continuous support to ensure
             lasting transformation.</span>
