--- a/Lesson 3/results/Allan_Jonson_web_site/contact.html
+++ b/Lesson 3/results/Allan_Jonson_web_site/contact.html
@@ -29,27 +29,27 @@
         <div class="text card">
             <h2>You can contact me by </h2>
             <div class="contact-item">
-                <img src="icons/email.png">
+                <img src="icons/email.png" alt="email icon">
                 <span>Allan.Jonson@gmail.com</span>
             </div>
             <div class="contact-item">
-                <img src="icons/call.png">
+                <img src="icons/call.png" alt="call icon">
                 <span>+38 (050) 22-11-333</span>
             </div>
             <div class="contact-item">
-                <img src="icons/facebook.png">
+                <img src="icons/facebook.png" alt="facebook icon">
                 <span>facebook.com/AllanJonson</span>
             </div>
             <div class="contact-item">
-                <img src="icons/instagram.png">
+                <img src="icons/instagram.png" alt="instagram icon">
                 <span>@Allan.Jonson</span>
             </div>
             <div class="contact-item">
-                <img src="icons/twitter.png">
+                <img src="icons/twitter.png" alt="twitter icon">
                 <span>twitter.com/Allan-Jonson</span>
             </div>
             <div class="contact-item">
-                <img src="icons/linkedin.png">
+                <img src="icons/linkedin.png" alt="linkedin icon">
                 <span>linkedin.com/in/Allan-Jonson</span>
             </div>
         </div>
