--- a/Lesson 3/results/Allan_Jonson_web_site/contact.html
+++ b/Lesson 3/results/Allan_Jonson_web_site/contact.html
@@ -25,8 +25,8 @@
 </header>
 <main>
     <div class="contact-container">
-        <div class="photo card"></div>
-        <div class="text card">
+        <img class="card" src="photo/man.png" alt="Allan Jonson photo"/>
+        <div class="card">
             <h2>You can contact me by </h2>
             <div class="contact-item">
                 <img src="icons/email.png" alt="email icon">
