--- a/Lesson 3/results/Allan_Jonson_web_site/about.html
+++ b/Lesson 3/results/Allan_Jonson_web_site/about.html
@@ -26,7 +26,7 @@
 </header>
 <main>
     <h1 id="beginning"> About Me</h1>
-    <div class="full-page card">
+    <div class="page-constraint card">
         <h2> Welcome to Your Path of Personal Growth</h2>
         <p> Hello! My name is Allan Jonson, and I am a certified personal life coach dedicated to helping
             individuals like you unlock their full potential. My mission is to provide you with the tools,
@@ -34,7 +34,7 @@
             a life you truly love.
         </p>
     </div>
-    <div class="full-page row card">
+    <div class="page-constraint row card">
         <div class="column">
             <h2> My Journey to Becoming a Life Coach</h2>
             <p> It was a journey shaped by challenges. There were moments when I felt stuck, doubted myself,
@@ -49,7 +49,7 @@
         </div>
         <img src="photo/man-suit-shouting.png" alt="Allan Jonson was stressed"/>
     </div>
-    <div class="full-page card">
+    <div class="page-constraint card">
         <h2> My Approach to Coaching</h2>
         <h3>Personalized Support</h3>
         <p>Your journey is unique, and so is my approach. I tailor each session to your specific needs, goals, and
@@ -94,7 +94,7 @@
                     dreams.</span>
         </div>
     </div>
-    <div class="full-page card">
+    <div class="page-constraint card">
         <h2> Let’s Start Your Journey</h2>
         <p> If you’re ready to take the first step towards a more fulfilling life, I’d love to partner with you on
             this journey. Together, we’ll uncover your potential, set actionable goals, and create a roadmap to
