blog and location pages were added, components css was added, refactoring

--- a/Lesson 3/results/Allan_Jonson_web_site/about.html
+++ b/Lesson 3/results/Allan_Jonson_web_site/about.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>Allan Jonson | ABOUT</title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/about.css">
-    <link rel="stylesheet" href="css/service.css">
+    <link rel="stylesheet" href="css/components.css">
 </head>
 <body>
 <header>
@@ -26,87 +25,89 @@
 </header>
 <main>
     <h1 id="beginning"> About Me</h1>
-    <div class="page-constraint card">
-        <h2> Welcome to Your Path of Personal Growth</h2>
-        <p> Hello! My name is Allan Jonson, and I am a certified personal life coach dedicated to helping
-            individuals like you unlock their full potential. My mission is to provide you with the tools,
-            guidance, and support needed to navigate life's challenges, set meaningful goals, and create
-            a life you truly love.
-        </p>
-    </div>
-    <div class="page-constraint row card">
-        <div class="column">
-            <h2> My Journey to Becoming a Life Coach</h2>
-            <p> It was a journey shaped by challenges. There were moments when I felt stuck, doubted myself,
-                and questioned my path. But through determination and self-discovery, I turned my struggles
-                into stepping stones.
-            </p>
-            <p> After all, I realized the power of self-awareness and intentional growth. This
-                inspired me to pursue certifications in Positive Psychology Coaching, Cognitive-Behavioral Coaching,
-                and Mindfulness-Based Stress Reduction and dedicate my career to helping others achieve their
-                dreams.
+    <div class="column large-cards-container">
+        <div class="page-constraint card">
+            <h2> Welcome to Your Path of Personal Growth</h2>
+            <p> Hello! My name is Allan Jonson, and I am a certified personal life coach dedicated to helping
+                individuals like you unlock their full potential. My mission is to provide you with the tools,
+                guidance, and support needed to navigate life's challenges, set meaningful goals, and create
+                a life you truly love.
             </p>
         </div>
-        <img src="photo/man-suit-shouting.png" alt="Allan Jonson was stressed"/>
-    </div>
-    <div class="page-constraint card">
-        <h2> My Approach to Coaching</h2>
-        <h3>Personalized Support</h3>
-        <p>Your journey is unique, and so is my approach. I tailor each session to your specific needs, goals, and
-            challenges, ensuring you receive the guidance and tools that work best for you.
-        </p>
-        <h3>Evidence-Based Techniques</h3>
-        <p>I utilize proven coaching methodologies, including:</p>
-        <ul>
-            <li>Positive psychology</li>
-            <li>Cognitive-behavioral strategies</li>
-            <li>Mindfulness practices</li>
-        </ul>
-        <h3>Accountability and Encouragement</h3>
-        <p>I am here to celebrate your wins, guide you through setbacks, and keep you accountable to the commitments
-            you make to yourself.
-        </p>
-    </div>
-    <h2> Why Choose Me?</h2>
-    <div class="service-container">
-        <div class="service-item card">
-            <img src="icons/one_on_one_coaching.png" alt="experience icon">
-            <h3>Experience</h3>
-            <span>Over 10 years of guiding individuals from diverse backgrounds to achieve their personal
+        <div class="page-constraint card-with-img card">
+            <div class="column">
+                <h2> My Journey to Becoming a Life Coach</h2>
+                <p> It was a journey shaped by challenges. There were moments when I felt stuck, doubted myself,
+                    and questioned my path. But through determination and self-discovery, I turned my struggles
+                    into stepping stones.
+                </p>
+                <p> After all, I realized the power of self-awareness and intentional growth. This
+                    inspired me to pursue certifications in Positive Psychology Coaching, Cognitive-Behavioral Coaching,
+                    and Mindfulness-Based Stress Reduction and dedicate my career to helping others achieve their
+                    dreams.
+                </p>
+            </div>
+            <img src="photo/man-suit-shouting.png" alt="Allan Jonson was stressed"/>
+        </div>
+        <div class="page-constraint card">
+            <h2> My Approach to Coaching</h2>
+            <h3>Personalized Support</h3>
+            <p>Your journey is unique, and so is my approach. I tailor each session to your specific needs, goals, and
+                challenges, ensuring you receive the guidance and tools that work best for you.
+            </p>
+            <h3>Evidence-Based Techniques</h3>
+            <p>I utilize proven coaching methodologies, including:</p>
+            <ul>
+                <li>Positive psychology</li>
+                <li>Cognitive-behavioral strategies</li>
+                <li>Mindfulness practices</li>
+            </ul>
+            <h3>Accountability and Encouragement</h3>
+            <p>I am here to celebrate your wins, guide you through setbacks, and keep you accountable to the commitments
+                you make to yourself.
+            </p>
+        </div>
+        <h2> Why Choose Me?</h2>
+        <div class="small-cards-container">
+            <div class="small-card card">
+                <img src="icons/one_on_one_coaching.png" alt="experience icon">
+                <h3>Experience</h3>
+                <span>Over 10 years of guiding individuals from diverse backgrounds to achieve their personal
                     growth.</span>
-        </div>
-        <div class="service-item card">
-            <img src="icons/certificate.png" alt="certificate icon">
-            <h3>Certifications</h3>
-            <span>Certified in Positive Psychology Coaching, Neuro-Linguistic Programming (NLP), and Leadership
+            </div>
+            <div class="small-card card">
+                <img src="icons/certificate.png" alt="certificate icon">
+                <h3>Certifications</h3>
+                <span>Certified in Positive Psychology Coaching, Neuro-Linguistic Programming (NLP), and Leadership
                     Coaching.</span>
-        </div>
-        <div class="service-item card">
-            <img src="icons/group_coaching.png" alt="proven results icon">
-            <h3>Proven Results</h3>
-            <span>Testimonials from clients who have achieved significant transformations. You can find the
+            </div>
+            <div class="small-card card">
+                <img src="icons/group_coaching.png" alt="proven results icon">
+                <h3>Proven Results</h3>
+                <span>Testimonials from clients who have achieved significant transformations. You can find the
                     customer's feedback at this</span>
-        </div>
-        <div class="service-item card">
-            <img src="icons/passion.png" alt="passion icon">
-            <h3>Passion</h3>
-            <span>My passion is helping people. Together, we’ll craft a path that inspires and leads you to your
+            </div>
+            <div class="small-card card">
+                <img src="icons/passion.png" alt="passion icon">
+                <h3>Passion</h3>
+                <span>My passion is helping people. Together, we’ll craft a path that inspires and leads you to your
                     dreams.</span>
+            </div>
         </div>
-    </div>
-    <div class="page-constraint card">
-        <h2> Let’s Start Your Journey</h2>
-        <p> If you’re ready to take the first step towards a more fulfilling life, I’d love to partner with you on
-            this journey. Together, we’ll uncover your potential, set actionable goals, and create a roadmap to
-            your success.
-        </p>
-        <h3> Get in Touch</h3>
-        <p> Feel free to contact me in any way convenient for you. Click the <a href="contact.html">link</a> to view
-            my full contact information. Let’s work together to make your dreams a reality!
-        </p>
-    </div>
-    <div class="to_the_beginning_btn">
-        <a href="#beginning"> &uparrow;</a>
+        <div class="page-constraint card">
+            <h2> Let’s Start Your Journey</h2>
+            <p> If you’re ready to take the first step towards a more fulfilling life, I’d love to partner with you on
+                this journey. Together, we’ll uncover your potential, set actionable goals, and create a roadmap to
+                your success.
+            </p>
+            <h3> Get in Touch</h3>
+            <p> Feel free to contact me in any way convenient for you. Click the <a href="contact.html">link</a> to view
+                my full contact information. Let’s work together to make your dreams a reality!
+            </p>
+        </div>
+        <div class="to_the_beginning_btn">
+            <a href="#beginning"> &uparrow;</a>
+        </div>
     </div>
 </main>
 </body>
