--- a/Lesson 3/results/Allan_Jonson_web_site/blog.html
+++ b/Lesson 3/results/Allan_Jonson_web_site/blog.html
@@ -1,29 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Allan Jonson | BLOG</title>
-  <link rel="stylesheet" href="css/main.css">
+    <meta charset="UTF-8">
+    <title>Allan Jonson | BLOG</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/components.css">
 </head>
 <body>
 <header>
-  <div>
-    <h3>Allan Jonson</h3>
-    <p>personal life coach</p>
-  </div>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="service.html">Service</a></li>
-      <li><a class="active_link">Blog</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="location.html">Location</a></li>
-    </ul>
-  </nav>
+    <div>
+        <h3>Allan Jonson</h3>
+        <p>personal life coach</p>
+    </div>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="service.html">Service</a></li>
+            <li><a class="active_link">Blog</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="location.html">Location</a></li>
+        </ul>
+    </nav>
 </header>
 <main>
+    <h1 id="beginning"> Blog </h1>
+    <div class="column large-cards-container">
+        <div class="page-constraint card card-with-img">
+            <div class="column">
+                <h2>Unlock Your Potential: A Guide to Self-Discovery</h2>
+                <p>Discover the power of self-awareness and learn actionable steps to identify your strengths, passions,
+                    and true purpose. This article provides a roadmap to help you unlock your potential and create a
+                    more fulfilling life.</p>
+                <button>Read more</button>
+            </div>
+            <img src="photo/hipster-style-bearded-man.png"
+                 alt="Allan Jonson doing yoga">
+        </div>
 
+        <div class="page-constraint card card-with-img">
+            <div class="column">
+                <h2>Mastering Time: The Secrets of Effective Time Management</h2>
+                <p>Struggling to balance your responsibilities? Learn proven strategies to prioritize tasks, eliminate
+                    distractions, and make the most of every moment. Take control of your time and achieve more with
+                    less stress.</p>
+                <button>Read more</button>
+            </div>
+            <img src="photo/watch.png"
+                 alt="Allan Jonson's watch">
+        </div>
+
+        <div class="page-constraint card card-with-img">
+            <div class="column">
+                <h2>Building Resilience: Thriving in the Face of Challenges</h2>
+                <p>Life is full of ups and downs, but resilience helps you rise above. Discover how to cultivate a
+                    resilient mindset, adapt to change, and thrive even in difficult times.</p>
+                <button>Read more</button>
+            </div>
+            <img src="photo/challenges.png"
+                 alt="Challenges photo">
+        </div>
+
+        <div class="row">
+            <div class="card number-card active">1</div>
+            <div class="card number-card">2</div>
+            <div class="card number-card">3</div>
+            <div class="card number-card">4</div>
+            <div class="card number-card">5</div>
+            <div class="card number-card">6</div>
+            <div class="card number-card">7</div>
+            <div class="card number-card">8</div>
+            <div class="card number-card">9</div>
+        </div>
+        <div class="to_the_beginning_btn">
+            <a href="#beginning"> &uparrow;</a>
+        </div>
+    </div>
 </main>
 </body>
 </html>
