--- a/Lesson 3/results/Allan_Jonson_web_site/contact.html
+++ b/Lesson 3/results/Allan_Jonson_web_site/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Allan Jonson | CONTACT</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/contact.css">
 </head>
 <body>
@@ -24,33 +25,35 @@
     </nav>
 </header>
 <main>
-    <div class="contact-container">
+    <div class="large-cards-container">
         <img class="card" src="photo/man.png" alt="Allan Jonson photo"/>
         <div class="card">
-            <h2>You can contact me by </h2>
-            <div class="contact-item">
-                <img src="icons/email.png" alt="email icon">
-                <span>Allan.Jonson@gmail.com</span>
-            </div>
-            <div class="contact-item">
-                <img src="icons/call.png" alt="call icon">
-                <span>+38 (050) 22-11-333</span>
-            </div>
-            <div class="contact-item">
-                <img src="icons/facebook.png" alt="facebook icon">
-                <span>facebook.com/AllanJonson</span>
-            </div>
-            <div class="contact-item">
-                <img src="icons/instagram.png" alt="instagram icon">
-                <span>@Allan.Jonson</span>
-            </div>
-            <div class="contact-item">
-                <img src="icons/twitter.png" alt="twitter icon">
-                <span>twitter.com/Allan-Jonson</span>
-            </div>
-            <div class="contact-item">
-                <img src="icons/linkedin.png" alt="linkedin icon">
-                <span>linkedin.com/in/Allan-Jonson</span>
+            <div class="column">
+                <h2>You can contact me by </h2>
+                <div class="contact-item">
+                    <img src="icons/email.png" alt="email icon">
+                    <span>Allan.Jonson@gmail.com</span>
+                </div>
+                <div class="contact-item">
+                    <img src="icons/call.png" alt="call icon">
+                    <span>+38 (050) 22-11-333</span>
+                </div>
+                <div class="contact-item">
+                    <img src="icons/facebook.png" alt="facebook icon">
+                    <span>facebook.com/AllanJonson</span>
+                </div>
+                <div class="contact-item">
+                    <img src="icons/instagram.png" alt="instagram icon">
+                    <span>@Allan.Jonson</span>
+                </div>
+                <div class="contact-item">
+                    <img src="icons/twitter.png" alt="twitter icon">
+                    <span>twitter.com/Allan-Jonson</span>
+                </div>
+                <div class="contact-item">
+                    <img src="icons/linkedin.png" alt="linkedin icon">
+                    <span>linkedin.com/in/Allan-Jonson</span>
+                </div>
             </div>
         </div>
     </div>
