--- a/Lesson 3/results/Allan_Jonson_web_site/index.html
+++ b/Lesson 3/results/Allan_Jonson_web_site/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Allan Jonson | HOME</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/components.css">
 </head>
 <body>
 <header>
@@ -22,11 +23,11 @@
         </ul>
     </nav>
 </header>
-<main>
+<main class="column">
     <p>Ambition Is A First Step To Success</p>
     <h1>Success</h1>
     <p>Now Available For Online Coaching</p>
-    <button>Book now</button>
+    <button class="main-btn">Book now</button>
 </main>
 </body>
 </html>
