--- a/Lesson 3/results/Allan_Jonson_web_site/location.html
+++ b/Lesson 3/results/Allan_Jonson_web_site/location.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Allan Jonson | LOCATION</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/components.css">
 </head>
 <body>
 <header>
@@ -15,7 +16,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="service.html" >Service</a></li>
+            <li><a href="service.html">Service</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="about.html">About</a></li>
             <li><a class="active_link">Location</a></li>
@@ -23,7 +24,15 @@
     </nav>
 </header>
 <main>
-
+    <div class="small-cards-container">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d81309.71018845629!2d30.41040759286417!3d50.442433499237104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cf8ea889b2c5%3A0x8b5dded631c11f3a!2sYourLifeCoach!5e0!3m2!1sen!2sua!4v1736168286817!5m2!1sen!2sua"
+                class="external-card card" width="600" height="450" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="card small-card">
+            <h2>You can find our main office by this address</h2>
+            <address>Tarasa Shevchenko Blvd, 5, Kyiv, 02000</address>
+        </div>
+    </div>
 </main>
 </body>
 </html>
