--- a/Lesson 3/results/Allan_Jonson_web_site/about.html
+++ b/Lesson 3/results/Allan_Jonson_web_site/about.html
@@ -105,7 +105,7 @@
                 my full contact information. Let’s work together to make your dreams a reality!
             </p>
         </div>
-        <div class="to_the_beginning_btn">
+        <div class="to-the-beginning-btn">
             <a href="#beginning"> &uparrow;</a>
         </div>
     </div>
