--- a/Lesson 3/results/Allan_Jonson_web_site/blog.html
+++ b/Lesson 3/results/Allan_Jonson_web_site/blog.html
@@ -72,7 +72,7 @@
             <div class="card number-card">8</div>
             <div class="card number-card">9</div>
         </div>
-        <div class="to_the_beginning_btn">
+        <div class="to-the-beginning-btn">
             <a href="#beginning"> &uparrow;</a>
         </div>
     </div>
